--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Flask==3.0.0
-Werkzeug==3.1.3
-asttokens==3.0.0
+Flask==2.2.5
+gunicorn==20.1.0
+pandas==2.1.2
 numpy==1.26.4
-pandas==2.2.2
 scikit-learn==1.3.2
 joblib==1.3.2
-threadpoolctl==3.6.0
